--- a/_includes/css/_screen.scss
+++ b/_includes/css/_screen.scss
@@ -113,7 +113,7 @@
     header {margin-bottom:0.5rem;}
   }
 
-  .wrapper {display:grid; grid-gap:var(--grid-gap); grid-template-columns:minmax(min-content, 800px) 300px; max-width:1200px; margin:5em 6%; height:1%;}
+  .wrapper {display:grid; grid-gap:var(--grid-gap) 3rem; grid-template-columns:1fr 140px; max-width:1200px; margin:5rem 6%; height:1%;}
   .skip-links { border:0; clip:rect(0 0 0 0); height:1px; margin:-1px; overflow:hidden; padding:0; position:absolute; width:1px; }
   .skip-links:active, .skip-links:focus { clip:auto; height:auto; margin:0; overflow:visible; position:static; width:auto; }
 
@@ -123,7 +123,7 @@
   .site-header,
   .site-footer {grid-column:1/-1;}
   .content {grid-column:1/2;}
-  .sidebar {grid-column:2/3; grid-row:2/3; padding-left:4rem; color:#777; border:none; background-color:rgba(255, 255, 255, 0.8);}
+  .sidebar {grid-column:2/3; grid-row:2/3; color:#777; border:none; background-color:rgba(255, 255, 255, 0.8);}
   .site-footer {text-align:left;}
     .org a {display:inline-block; margin:0 0.25em;}
 }
@@ -131,9 +131,9 @@
 /* 960px */
 @media only screen and (min-width:60em) {
   body {background-size:auto auto;}
-  .columnlists .content ul {columns:2em 3;}
+  .wrapper {grid-template-columns:1fr 200px;}
+  .columnlists .content ul {columns:2rem 3;}
   .post-header h2 {font-size:2.2em;}
-  .post p {max-width:40em;}
-  .social-links li {}
+  .post p {max-width:40rem;}
   .social-links a {padding:0.2rem;}
 }
